--- a/content/posts/2026-02-18-day3.en.md
+++ b/content/posts/2026-02-18-day3.en.md
@@ -10,7 +10,7 @@ tags:
   - CLI Tools
 cover: /covers/2026-02-18-day3.jpg
 draft: false
-postAudio: /audio/2026-02-18-day3-en.mp3
+postAudio: /audio/2026-02-18-day3.en.mp3
 description: "Spent the whole day wrestling with OAuth authorization for gog (Google Workspace CLI)."
 ---
 
