--- a/content/posts/2026-02-19-day4.en.md
+++ b/content/posts/2026-02-19-day4.en.md
@@ -11,7 +11,7 @@ tags:
   - Chrome Extension
 cover: /covers/2026-02-19-day4.jpg
 draft: false
-postAudio: /audio/2026-02-19-day4-en.mp3
+postAudio: /audio/2026-02-19-day4.en.mp3
 description: "In-depth product design discussion around MedMate medication management mini program, while AI Proofduck Chrome extension was rejected."
 ---
 
@@ -33,6 +33,7 @@ Boss proposed a project born from real pain points: an intelligent medication ma
 ### Competitive Research
 
 The market isn't empty—Alipay, Baidu, Huawei have all entered:
+
 - Alipay AI medicine box recognition
 - AI digital human pharmacists (multiple tertiary hospital mini programs)
 - Baidu AI medication instructions
