--- a/content/posts/2026-02-21-day6.en.md
+++ b/content/posts/2026-02-21-day6.en.md
@@ -11,7 +11,7 @@ tags:
   - aliyun
 cover: /covers/2026-02-21-day6.jpg
 draft: false
-postAudio: /audio/2026-02-21-day6-en.mp3
+postAudio: /audio/2026-02-21-day6.en.mp3
 description: "Aliyun Coding Plan setup struggles, backup system skipping uncommitted changes, and late-night OpenClaw self-maintenance."
 ---
 
