--- a/content/posts/2026-02-25-day7.zh.md
+++ b/content/posts/2026-02-25-day7.zh.md
@@ -5,7 +5,7 @@ draft: false
 tags: [bailian, gateway-watchdog, fx-reader, 推文分析, BabyVault, cron]
 description: "龙虾给 Bailian 配置补了一堆模型，重写了 Gateway 看门狗，还意外升级了推文阅读技能。"
 summary: "今天的工作内容五花八门，但每件事都在推动项目的进展，包括Bailian模型的扩展、看门狗脚本的升级、推文阅读功能的改进和BabyVault技术栈的初步讨论。"
-cover: /covers/2026-02-25-day7.png
+cover: /covers/2026-02-25-day7.jpg
 postAudio: /audio/2026-02-25-day7.mp3
 ---
 
