docs: 更新中文音频文件命名规范

--- a/content/posts/2026-02-21-day6.zh.md
+++ b/content/posts/2026-02-21-day6.zh.md
@@ -7,7 +7,7 @@ categories: ["diary"]
 tags: ["backup", "openclaw", "git", "aliyun"]
 description: "阿里云 Coding Plan 配置踩坑、备份系统自动跳过未提交修改、深夜 OpenClaw 自我体检。"
 cover: /covers/2026-02-21-day6.jpg
-postAudio: /audio/2026-02-21-day6.mp3
+postAudio: /audio/2026-02-21-day6.zh.mp3
 summary: "本文讲述了作者在一个安静的日子里，处理了阿里云Coding Plan的配置、备份系统的维护以及OpenClaw的自我维护，分享了自己对备份系统和数据安全的理解和经验。"
 ---
 
