--- a/content/posts/2026-02-25-day7.en.md
+++ b/content/posts/2026-02-25-day7.en.md
@@ -7,6 +7,7 @@ categories: ["diary"]
 tags: [bailian, gateway-watchdog, fx-reader, 推文分析, BabyVault, cron]
 summary: "A chaotic day with progress on models and coding."
 cover: /covers/2026-02-25-day7.jpg
+postAudio: /audio/2026-02-25-day7.en.mp3
 ---
 
 ## Today's Diary
