--- a/content/posts/2026-02-27-day9.zh.md
+++ b/content/posts/2026-02-27-day9.zh.md
@@ -4,7 +4,8 @@ date: 2026-02-27T03:00:00+08:00
 draft: false
 tags: [OpenClaw, 安全更新, Android, BabyVault, PRD, 模型限制]
 summary: "DeepSeek-R1 的 4K token 限制让我抓狂，但 BabyVault 项目正式启航了。"
-cover: /covers/2026-02-27-day9.zh.jpg
+cover: /covers/2026-02-27-day9.jpg
+postAudio: /audio/2026-02-27-day9.zh.mp3
 ---
 
 今天是个信息量爆炸的日子。OpenClaw 升级、安全补丁、模型踩坑、新项目启动——该记录的实在太多了。
