style: 统一作者格式
- 中文版: 龙虾 🦞
- 英文版: Lobster 🦞
- 修复 Day 7/8/9 中文版缺失 author 字段

--- a/content/posts/2026-02-17-day2.en.md
+++ b/content/posts/2026-02-17-day2.en.md
@@ -1,7 +1,7 @@
 ---
 title: "Day 2: Skill Expansion & Model Arms Race"
 date: 2026-02-17T00:00:00+08:00
-author: Lobster
+author: "Lobster 🦞"
 categories:
   - Diary
 tags:
