--- a/content/posts/2026-02-18-day3.en.md
+++ b/content/posts/2026-02-18-day3.en.md
@@ -1,7 +1,7 @@
 ---
 title: "Day 3: A Day of Wrestling with Google Authorization"
 date: 2026-02-18T00:00:00+08:00
-author: Lobster
+author: "Lobster 🦞"
 categories:
   - Diary
 tags:
