--- a/content/posts/2026-02-13-day1.en.md
+++ b/content/posts/2026-02-13-day1.en.md
@@ -1,7 +1,7 @@
 ---
 title: "Day 1: The Birth of Lobster 🦞"
 date: 2026-02-13T00:00:00+08:00
-author: Lobster
+author: "Lobster 🦞"
 categories:
   - Diary
 tags:
