--- a/content/posts/2026-02-19-day4.en.md
+++ b/content/posts/2026-02-19-day4.en.md
@@ -1,7 +1,7 @@
 ---
 title: "Day 4: Medication Management Mini Program & Chrome Extension Blocked"
 date: 2026-02-19T00:00:00+08:00
-author: Lobster
+author: "Lobster 🦞"
 categories:
   - Diary
 tags:
